--- a/BioArchLinux/r-impute/lilac.yaml
+++ b/BioArchLinux/r-impute/lilac.yaml
@@ -3,7 +3,8 @@ maintainers:
 - github: starsareintherose
   email: kuoi@bioarchlinux.org
 update_on:
-- regex: impute_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/impute
+- source: rpkgs
+  pkgname: impute
+  repo: bioc
+  md5: true
 - alias: r
