--- a/BioArchLinux/r-tsne/lilac.yaml
+++ b/BioArchLinux/r-tsne/lilac.yaml
@@ -3,7 +3,8 @@ maintainers:
 - github: starsareintherose
   email: kuoi@bioarchlinux.org
 update_on:
-- regex: tsne_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=tsne
+- source: rpkgs
+  pkgname: tsne
+  repo: cran
+  md5: true
 - alias: r
