--- a/BioArchLinux/r-rsubread/lilac.yaml
+++ b/BioArchLinux/r-rsubread/lilac.yaml
@@ -3,7 +3,13 @@ maintainers:
 - github: starsareintherose
   email: kuoi@bioarchlinux.org
 update_on:
-- regex: Rsubread_([\d._-]+).tar.gz
-  source: regex
-  url: https://bioconductor.org/packages/Rsubread
+- source: rpkgs
+  pkgname: Rsubread
+  repo: bioc
+  md5: true
 - alias: r
+- source: alpm
+  alpm: zlib
+  repo: core
+  provided: libz.so
+  strip_release: true
