--- a/BioArchLinux/r-r.methodss3/lilac.yaml
+++ b/BioArchLinux/r-r.methodss3/lilac.yaml
@@ -3,7 +3,8 @@ maintainers:
 - github: starsareintherose
   email: kuoi@bioarchlinux.org
 update_on:
-- regex: R.methodsS3_([\d._-]+).tar.gz
-  source: regex
-  url: https://cran.r-project.org/package=R.methodsS3
+- source: rpkgs
+  pkgname: R.methodsS3
+  repo: cran
+  md5: true
 - alias: r
